# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "maplibre-native"
version = "1.12.1"
authors = ["Slint Developers <info@slint.dev>"]
edition = "2021"
build = "build.rs"
license = "MIT"
publish = false

[workspace]

[[bin]]
path = "main.rs"
name = "maplibre-native"

[dependencies]
slint = { path = "../../api/rs/slint", features = ["unstable-wgpu-24"] }
bytemuck = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"

[build-dependencies]
slint-build = { path = "../../api/rs/build" }