# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "maplibre-native"
version = "1.12.1"
authors = ["Slint Developers <info@slint.dev>"]
edition = "2021"
build = "build.rs"
license = "MIT"
publish = false

[workspace]

[[bin]]
path = "main.rs"
name = "maplibre-native"

[dependencies]
slint = { path = "../../api/rs/slint", features = ["unstable-wgpu-24"] }
bytemuck = "1.0"
log = "0.4"
env_logger = "0.11"
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = { path = "../../api/rs/build" }
cxx-build = "1.0"
cmake = "0.1"